--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,10 @@
       "error",
       { "blankLine": "always", "prev": "*", "next": "return" },
       { "blankLine": "always", "prev": "block-like", "next": "*" },
-      { "blankLine": "always", "prev": "*", "next": "block-like" }
+      { "blankLine": "always", "prev": "*", "next": "block-like" },
+      { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*"},
+      { "blankLine": "any", "prev": ["const", "let", "var"], "next": ["const", "let", "var"]},
+      { "blankLine": "always", "prev": "function", "next": "function" }
     ],
     "no-console": "error",
     "no-multiple-empty-lines": ["error", { "max": 1 }],
@@ -24,7 +27,7 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     "no-underscore-dangle": 0,
-    "lines-between-class-members": 0,
+    "lines-between-class-members": ["error", "always"],
     "implicit-arrow-linebreak": 0,
     "arrow-parens": 0,
     "jsx-a11y/label-has-for": 0,
